# galaxy_morphology_classification

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
inference/: app.py  config.py
notebooks/: eda.ipynb  train_and_evaluate.ipynb
results/confusion_matrices/custom_cnn/: balanced_train_balanced_test.json  balanced_train_unbalanced_test.json  unbalanced_train_unbalanced_test.json
results/confusion_matrices/resnet18/: balanced_train_balanced_test.json  balanced_train_unbalanced_test.json  unbalanced_train_unbalanced_test.json
results/confusion_matrices/resnet26/: balanced_train_balanced_test.json  balanced_train_unbalanced_test.json  unbalanced_train_unbalanced_test.json
results/confusion_matrices/resnet50/: balanced_train_balanced_test.json  balanced_train_unbalanced_test.json  unbalanced_train_unbalanced_test.json
results/confusion_matrices/vgg16/: balanced_train_balanced_test.json  balanced_train_unbalanced_test.json  unbalanced_train_unbalanced_test.json
results/confusion_matrices/vgg19/: balanced_train_balanced_test.json  balanced_train_unbalanced_test.json  unbalanced_train_unbalanced_test.json
results/metrics/: all_results.json
scripts/: predictions.py  utils.py
src/data/: dataloaders.py  transforms.py
src/evaluation/: predictions.py
src/galaxy_morphology.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: custom_cnn.py  get_model.py  resnet.py  vgg.py  vit.py
src/training/: engine.py
src/utils/: early_stopping.py  save_confusion_matrix_json.py  save_model.py  set_seed.py  visualisations.py
(+3 files in other folders)
