[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy-morphology"
version = "0.1.0"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "timm"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
